bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
  namespace: bgd
spec:
  host: "bgd.attcommon-d5d2108ec84854bf878e3ea3cb4fc97a-0000.us-south.containers.appdomain.cloud"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
